monitor/k8s/traefik-middleware-basic-auth.yaml

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: monitoring
spec:
  basicAuth:
    secret: auth-secret # Kubernetes secret named "secretName"
