monitor/k8s/ingress-route-grafana.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-grafana
  routes:
    - match: Host(`grafana.env0.luojm.com`) 
      kind: Rule
      services:
      - name: grafana
        kind: Service
        namespace: monitoring
        port: 3000
