monitor/k8s/ingress-route-prometheus.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-prometheus
  routes:
    - match: Host(`prometheus.env0.luojm.com`) 
      kind: Rule
      services:
      - name: prometheus-k8s
        kind: Service
        namespace: monitoring
        port: 9090
      middlewares:
        - name: auth
